k8s/odoo/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-postgres
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-postgres
  template:
    metadata:
      labels:
        app: odoo-postgres
    spec:
      nodeSelector:
        kubernetes.io/hostname: control-plane
      containers:
      - name: postgres
        image: postgres:15
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 768Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: odoo-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-postgres
  namespace: odoo
spec:
  selector:
    app: odoo-postgres
  ports:
  - port: 5432
    targetPort: 5432
